fix alignment on author info

--- a/app/assets/stylesheets/catarse_bootstrap/_main.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_main.sass
@@ -1745,6 +1745,12 @@ button
     .back-payment-button-next-step
       width: 50%
 
+  .thumb-author
+    margin-bottom: 20px
+
+  .body-medium
+    font-size: 15px
+
 @media screen and (max-width: 767px)
   .back-reward-content
     .faq-box-title 
